name: mudFrp
version: 1.0.0.2
cabal-version: >=1.18
build-type: Simple
license: BSD3
license-file: LICENSE
author: Chris Van Vranken
data-files: *.png
data-dir: data

flag threaded
    Default: False

executable mudFrp
    build-depends: ghc >=7.6.3, transformers == 0.3.0.0,
                   split >=0.2.2 && <0.3, executable-path >=0.0.3 && <0.1,
                   filepath >=1.3.0.1 && <1.4, wx ==0.91.0.0, wxcore ==0.91.0.0,
                   reactive-banana >=0.8 && <0.9, reactive-banana-wx >=0.8 && <0.9,
                   random >=1.0.1.1, base >=4.2 && <5

    if flag(threaded)
        buildable: True
        ghc-options: -threaded
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables TupleSections ViewPatterns
    hs-source-dirs: src
    other-modules: RBWX.Banana.Banana Aui RBWX.RBWX
                   RBWX.Banana.WX.Additions RBWX.Banana.WX.Core.Lift
                   RBWX.Banana.WX.Core.ContextMenu RBWX.Banana.WX.Core.Core Dialogs
                   Controls.Mud.MapEditor SourceEditor Paths_mudFrp Paths

